fix h1 align

--- a/nu-kenzie/src/components/CardList/styles.module.css
+++ b/nu-kenzie/src/components/CardList/styles.module.css
@@ -1,7 +1,6 @@
 .title1 {
   font-size: 20px;
   margin: 0 20px;
-  align-self: center;
   margin-bottom: 27px;
   font-weight: 700;
   max-width: 100%;
@@ -11,4 +10,15 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+}
+
+@media (max-width: 575px) {
+  .title1 {
+    font-size: 20px;
+    margin: 0 20px;
+    align-self: center;
+    margin-bottom: 27px;
+    font-weight: 700;
+    max-width: 100%;
+  }
 }
